[package]
name = "currentlogger"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.32", features = ["binstart"] }
esp-idf-svc = { version="=0.45", features = ["experimental", "alloc"] }
embedded-svc = "0.24"
log = "0.4"
anyhow = "1"
embedded-hal = "=1.0.0-alpha.9"
esp-idf-hal = "0.40.1"
embedded-graphics = "0.7"
bmp = "0.5.0"
tinybmp = "0.4.0"
toml-cfg = "0.1.3"
ssd1331 = "0.3.0"

[build-dependencies]
embuild = "0.28"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
